[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "med-minds"
version = "0.0.6"
description = "A package for downloading and processing multimodal oncology data from the MINDS database"
readme = "README.md"
authors = [
    {name = "Aakash Tripathi", email = "aakash.tripathi@moffitt.org"}
]
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
Repository = "https://github.com/lab-rasool/MINDS"