[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "med-minds"
version = "0.2.0"
description = "A package for downloading and processing multimodal oncology data from the MINDS database"
readme = "README.md"
authors = [
    {name = "Aakash Tripathi", email = "aakash.tripathi@moffitt.org"}
]
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "cachetools",
    "certifi",
    "charset-normalizer",
    "google-api-core",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-cloud-bigquery",
    "google-cloud-core",
    "google-cloud-storage",
    "google-crc32c",
    "google-resumable-media",
    "googleapis-common-protos",
    "grpcio",
    "httplib2",
    "hurry.filesize",
    "idna",
    "packaging",
    "proto-plus",
    "protobuf",
    "pyasn1",
    "pyasn1-modules",
    "pyparsing",
    "requests",
    "rsa",
    "six",
    "tqdm",
    "uritemplate",
    "urllib3",
    "google-auth",
    "retry",
    "numpy",
    "pandas",
    "python-dotenv",
    "sqlalchemy",
    "psycopg2-binary",
    "cryptography",
    "rich"
]

[project.urls]
Repository = "https://github.com/lab-rasool/MINDS"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
]
